# factorial

./: CMakeLists.txt
cmake/: Config.cmake.in
include/: .fact.h.un~  fact.h
src/: fact.cpp
